# ECS_TEST

./: CMakeLists.txt  ECS.cpp  ECS.h  README.md  main.cpp
Component/: ComponentArray.h  IComponentArray.h  Position.h
Entity/: Entity.h
System/: AISystem.h  FixedTimeStepSystem.h  FrameSkipSystem.h  ISystem.h  IntervalSystem.h  ParticleSystem.h  PhysicsSystem.h  RenderSystem.h  System.h  SystemContext.h
Utility/: Utilities.h
